# byte-grain

./: README.md
src/: SocketClient.py  app.py  client.py  foo.c  main.c
src/app-c/: CMakeLists.txt  config.h  main.c
src/client-py/: SocketClient.py  client.py
src/lib/: canvas.c  canvas.h  socket_server.c  socket_server.h
src/lib/app/: canvas.c  canvas.h  grain_def.h  interface.h  screen.c  screen.h
src/lib/utils/: bg_codes.h  bg_colors.h  bg_log.c  bg_log.h  bg_msg.h  image_buf.h
src/lib/xal/: socket_server.c  socket_server.h
src/lib/xsp/: ctrl_panel.c  ctrl_panel.h  display.c  display.h  nv_memory.c  nv_memory.h  socket_display.c  socket_display.h
